--- a/www.blog.com.br/css/blog.css
+++ b/www.blog.com.br/css/blog.css
@@ -31,7 +31,7 @@ body{
 
  footer {
 
-    background-color: purple;
+    background-color: #000;
     min-height: 200px; 
 }
 main {
@@ -150,7 +150,7 @@ header#cabecalho.cabecalho{
 section[role=posts]{
     background: white;
     width: 1000px;
-    min-height: 900px;
+    min-height: 1000px;
     float: left;
     padding: 25px;
 }
@@ -159,7 +159,7 @@ section[role=posts]{
 section[role=sidebar]{
     background: tomato;
     width: 200px;
-    min-height: 900px;
+    min-height: 1000px;
     float: left;
      padding: 25px;
 }
@@ -180,11 +180,83 @@ section[role=sidebar]{
     line-height: 1.25;
 }
 
-.post:after{
+.post:before{
     background: #666;
     width:100%;
     height: 1px;
     display: block;
     content: "";
     margin: 40px auto 20px;
+}
+
+.post:last-child::after{
+
+    display: none;
+}
+
+.sidebar__link:hover{
+    color: #000;
+    text-decoration:underline;
+
+}
+
+.sidebar__link a 
+{
+    color: inherit;
+    text-decoration:inherit;
+}
+
+
+.site-footer__copyright{
+    float:left;
+    color:#fff;
+    line-height: 85px;
+    padding: 0 0 0 20px;
+    
+
+}
+
+.site-footer__social{
+    float: right;
+}
+
+
+
+
+.social__icon{
+    float:left;
+    margin:0 5px;
+}
+.social__icon a{
+    background: url(../img/social.jpg) no-repeat;
+    width: 45px;
+    height: 45px;
+   /* border: 1px solid red;*/
+    text-indent: -9000px;
+    display: block;
+}
+
+.social__icon--fb a{
+   background-position: -26px -307px; 
+
+}
+
+.social__icon--fb:hover a{
+    background-position: -26px -17px; 
+}
+
+.social__icon--tw a{
+   background-position: -80px -307px; 
+
+}
+.social__icon--tw:hover a{
+    background-position: -80px -17px; 
+}
+
+.social__icon--in a{
+   background-position: -295px -307px; 
+
+}
+.social__icon--in:hover a{
+    background-position: -295px -17px; 
 }
