--- a/www.blog.com.br/css/blog.css
+++ b/www.blog.com.br/css/blog.css
@@ -43,8 +43,9 @@ main {
 /* seletor de classe*/
 .container{
     /*border: 1px solid ;  sintaxe basica like construtor */
-    width: 1200px;
+    width: 90%;
     margin: auto;
+    max-width: 1200px
 
 }
 /*
